<resources>
    <string name="app_name">LAB03_3</string>
    <string name="student_name">Student Name</string>
    <string name="student_age">Student Age</string>
    <string name="undergraduate">Undergraduate</string>
    <string name="view_all">View All</string>
    <string name="add">Add</string>
    <string name="student_id">Student ID</string>
    <string name="student_email">Email</string>
    <string name="student_date_of_birth">Date Of Birth</string>
</resources>